# SO-project

SoThredsApp/: CMakeLists.txt
SoThredsApp/main/: main.cpp
SoThredsApp/map/: MaInAppMap.cpp  MaInAppMap.h  MainAppMap.cpp  MainAppMap.h
SoThredsApp/threads/entity/: Person.cpp  Person.h
SoThredsApp/threads/entityGenerator/: EntityGenerator.cpp  EntityGenerator.h
SoThredsApp/threads/mapRender/: MapRender.cpp  MapRender.h
SoThredsApp/threads/switch/: SwitchThread.cpp  SwitchThread.h
so-2/: CMakeLists.txt  etap2.txt  main.cpp
so-2/helpClasses/: Cord.cpp  Cord.h  People.cpp  People.h  SharedData.h
